--- a/homepg.html
+++ b/homepg.html
@@ -73,7 +73,7 @@
 <body>
     <center>
         <img src="microphone.png" title="Click to speak"><br>
-        <!-- digits to appear her -->
+        <!-- digits to appear here -->
         <input type="text" class="appear"><br><br><br>
         <button onclick="correct()" class="correct">Show Correct Digits</button>&nbsp;&nbsp;&nbsp;&nbsp;
         <button onclick="clearIt()" class="clear">Clear</button>
