--- a/homepg.html
+++ b/homepg.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/X-icon" href="media/images/srss-logo-removebg-preview.png">
     <title>Home page</title>
 </head>
 <style>
